# statement-ingestor

./: .env.example  .gitignore  ISSUE_22_FIX_REPORT.md  ISSUE_23_FINAL_SUMMARY.md  ISSUE_24_IMPLEMENTATION.md  LICENSE  README.md  SPEC_MVP.md  debug_issue_19.py  demo_issue_24_solution.py  main.py  main.py.backup  oauth_test.py  pyproject.toml  replace_heuristic.py  requirements-dev.txt  requirements.txt  setup-venv.sh  showcase_enhancements.py  test_bank_parsers.py  test_chunking.py  test_enhancements.py  test_integration.py  test_issue_24_comprehensive.py  test_issue_24_large_transactions.py  test_multiple_transactions.py  test_pdf.py
config/: README.md  client_secrets.example.json
docs/: COMPLETION_REPORT.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_REPORT.md  PRD.md  README.md  SPEC_MVP.md  TRD_v1.md
legacy/: README.md  demo_enhancements.py  main_enhanced.py  main_enhanced_integrated.py  parser_factory.py
output/: expenses_20260309_224447.csv  expenses_20260310_224722.csv  expenses_20260310_225754.csv  expenses_20260311_181314.csv  pdf_text_lines_20260310_225632.csv  pdf_text_lines_20260311_181314.csv
scripts/: analyze_statement_search.py  final_performance_test.py  performance_test.py  performance_test_v2.py  run_performance_analysis.py  run_performance_tests.py  simple_performance_test.py  test_performance.py
specs/: sender_summary_report_v1.md
src/: app.py  config.py  csv_exporter.py  gmail_client.py  parser_factory.py  pdf_extractor.py
test/: test_app.py  test_app_comprehensive.py  test_bank_dbs_sg_bank.py  test_bank_dbs_sg_bank_v2.py  test_bank_esun_general.py  test_bank_hsbc_sg_card_v2.py  test_bank_hsbc_sg_composite.py  test_bank_hsbc_sg_full.py  test_bank_parsers.py  test_bank_parsers_comprehensive.py  test_bank_pdf_samples.py  test_chunking.py  test_config_edge_cases.py  test_config_validator_comprehensive.py  test_csv_statement_parser.py  test_csv_writer.py  test_csv_writer_comprehensive.py  test_dbs_sg_parsers.py  test_download_pdfs.py  test_download_pdfs_comprehensive.py  test_download_pdfs_enhanced.py  test_e2e_workflow.py  test_enhancements.py  (+29 more)
(+94 files in other folders)
